<resources>
    <string name="app_name">Offers</string>
    <string name="title_home">Home</string>
    <string name="title_inprogress">InProgress</string>
    <string name="title_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_new_account">Create New Account</string>
    <string name="employee">Employee</string>
    <string name="manager">Manager</string>
    <string name="content">content</string>
    <string name="name">Name</string>
    <string name="telephone">Telephone</string>
    <string name="role">Rule</string>
    <string name="create">Create</string>
    <string name="forget_password">Forget Password</string>
    <string name="confirm">Confirm</string>
    <string name="description">Description:</string>
    <string name="organization">Organization:</string>
    <string name="salary">Salary</string>
    <string name="offer">Offer</string>
    <string name="equity">Equity:</string>
    <string name="other_benefits">Other Benefits:</string>
    <string name="apply">Apply</string>
    <string name="start_typing">Start typing</string>
    <string name="logout">Logout</string>
    <string name="no_offer_yet">No Offer yet</string>
  <string name="no_user">No User Exist with this data.</string>

    <string-array name="Rules">

        <item  name="android">Android Developer</item>
        <item  name="flutter">Flutter Developer</item>
        <item  name="back_end">BackEnd Developer</item>
        <item  name="front_end">FrontEnd Developer</item>

    </string-array>
</resources>