<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tolls="http://schemas.android.com/tools"
    android:elevation="4dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="4dp"
    android:layout_margin="2dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textSize="18sp"
            android:textColor="@color/purple_700"
            android:layout_margin="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_description_data"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:lines="2"
            android:ellipsize="end"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_description"
            app:layout_constraintTop_toTopOf="@+id/tv_description"
            tolls:text="Dummy DataDummy DataDummy DataDummy DataDummy DataDummy DataDummy Data" />

        <TextView
            android:id="@+id/tv_organization"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/organization"
            android:textColor="@color/purple_700"
            android:textSize="18sp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/tv_description"
            app:layout_constraintTop_toBottomOf="@+id/tv_description_data" />

        <TextView
            android:id="@+id/tv_organization_data"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:lines="1"
            android:ellipsize="end"
            app:layout_constraintBottom_toBottomOf="@+id/tv_organization"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_organization"
            app:layout_constraintTop_toTopOf="@+id/tv_organization"
            tolls:text="Dummy Data" />

        <TextView
            android:id="@+id/tv_salary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/salary"
            android:textColor="@color/purple_700"
            android:textSize="18sp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/tv_organization"
            app:layout_constraintTop_toBottomOf="@+id/tv_organization" />

        <TextView
            android:id="@+id/tv_salary_data"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:lines="1"
            android:ellipsize="end"
            app:layout_constraintBottom_toBottomOf="@+id/tv_salary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_salary"
            app:layout_constraintTop_toTopOf="@+id/tv_salary"
            tolls:text="2000$/month" />

        <TextView
            android:id="@+id/tv_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:textColor="@color/teal_200"
            android:textSize="18sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_salary_data"
            tolls:text="New" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>